# CS445

./: README.md  assign01Client.c  testClient.c  testServer.c
Assign01/: assign01Server.c
Assign01/client/: client.c
Assign01/server/: server.c
Assign02/: client.py  eleven.py  garbage.txt  mySocket.py  robot_client.py  robot_server.py  server.py  test.py  userChat.py
Assign02/AIToAI/: robot_client.py
Assign02/UserChat/: userChat.py
Assign02/UserToAI/: server.py
FinalProject/: company_name.py  crontab.txt  get_stock_price.py  package-lock.json  package.json  requirements.txt  stock_prices.json  tickers.json  tickers.txt  website.py
FinalProject/backend/: package-lock.json  package.json  server.js
FinalProject/frontend/app/: package-lock.json  package.json
FinalProject/frontend/app/src/: App.jsx  AvatarDropdown.jsx  BuySellPopup.jsx  HomeButton.jsx  LoginPopup.css  LoginPopup.jsx  PriceLineGraph.jsx  SearchBar.jsx  StockCard.css  StockCard.jsx  StockDetails.jsx  TickerPage.css  TickerPage.jsx  index.jsx
FinalProject/frontend/frontend/src/: SearchBar.jsx
FinalProject/update_stock_prices/: Cargo.toml  tickers.txt
FinalProject/update_stock_prices/src/: main.rs  stock_ticker.rs
backend/: package-lock.json
frontend/app/src/: App.css  App.jsx  LoginPopup.jsx
update_stock_prices/: Cargo.toml
update_stock_prices/src/: lib.rs  stock_history.rs
