[package]
name = "update_stock_prices"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-test = "0.4.4"
yahoo_finance_api = "3.0.0"
chrono = "0.4"
time = "0.3"
mongodb = "2.0"  # MongoDB driver version 2.x
tokio = { version = "1", features = ["full"] }
chrono-tz = "0.6"
serde = { version = "1.0", features = ["derive"] }
